# Weather-app

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: test_weather_app.py
weather_app/: __init__.py  app.py
weather_app/templates/: 404.html  forecasts.html  layout.html
